Add JS to questions page

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     </section>
     
     <section id="questions-page">
-        <h2>{QUESTION GOES HERE}</h2>
-        <ol>
-            <li>{choice1}</li>
+        <h2 id="question">{QUESTION GOES HERE}</h2>
+        <ol id="choices">
+            <!-- <li>{choice1}</li>
             <li>{choice2}</li>
             <li>{choice3}</li>
-            <li>{choice4}</li>
+            <li>{choice4}</li> -->
         </ol>
-        <p>{Correct/Wrong Msg}</p>
+        <p id="msg">{Correct/Wrong Msg}</p>
     </section>
 
     <section id="results-page">
