Fix bug with high scores list, create array shuffle function

--- a/index.html
+++ b/index.html
@@ -23,14 +23,10 @@
     </section>
     
     <section id="questions-page">
-        <h2 id="question">{QUESTION GOES HERE}</h2>
+        <h2 id="question"></h2>
         <ol id="choices">
-            <!-- <li>{choice1}</li>
-            <li>{choice2}</li>
-            <li>{choice3}</li>
-            <li>{choice4}</li> -->
         </ol>
-        <p id="msg">{Correct/Wrong Msg}</p>
+        <p id="msg"></p>
     </section>
 
     <section id="results-page">
