Fix bugs in questions and results pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2 id="question"></h2>
         <ol id="choices">
         </ol>
-        <p id="msg"></p>
+        <p id="msg-questions"></p>
     </section>
 
     <section id="results-page">
@@ -37,6 +37,7 @@
             <input type="text" id="initials" name="initials" maxlength="2">
             <button type="submit" form="initials-form" id="initials-submit">Submit</button>
         </form>
+        <p id="msg-results"></p>
     </section>
 
     <section id="high-scores-page">
