--- a/index.html
+++ b/index.html
@@ -25,27 +25,41 @@
     <section id="questions-page">
         <h2 id="question"></h2>
         <ol id="choices">
+            <!-- <li>multiple choice 1</li>
+            <li>multiple choice 2</li>
+            <li>multiple choice 3 with <code>some code</code></li>
+            <li>multiple choice 4 with <code>some code</code></li> -->
         </ol>
-        <p id="msg-questions"></p>
+        <!-- <p id="msg-questions">ABC</p> -->
     </section>
 
     <section id="results-page">
         <h2>All done!</h2>
-        <p>Your final score is <sec id="final-score"></sec></p>
+        <p>Your final score is <sec id="final-score">33</sec></p>
         <form id="initials-form">
             <label for="initials">Enter initials:</label>
             <input type="text" id="initials" name="initials" maxlength="2">
             <button type="submit" form="initials-form" id="initials-submit">Submit</button>
         </form>
-        <p id="msg-results"></p>
+        <!-- <p id="msg-results">ABC</p> -->
+    </section>
+
+    <section id="msg-section">
+        <p id="msg">Correct/Wrong</p>
     </section>
 
     <section id="high-scores-page">
         <h2>High Scores</h2>
         <ol id="high-scores-list">
+            <!-- <li>high score 1</li>
+            <li>high score 2</li>
+            <li>high score 3</li>
+            <li>high score 4</li> -->
         </ol>
-        <button id="go-back">Go Back</button>
-        <button id="clear-high-scores">Clear High Scores</button>
+        <div id="hs-buttons">
+            <button id="go-back">Go Back</button>
+            <button id="clear-high-scores">Clear High Scores</button>
+        </div>
     </section>
 
     <script src="./assets/js/script.js"></script>
