--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section id="msg-section">
-        <p id="msg">Correct/Wrong</p>
+        <p id="msg"></p>
     </section>
 
     <section id="high-scores-page">
